--- a/app/src/main/res/layout/fragment_drinks.xml
+++ b/app/src/main/res/layout/fragment_drinks.xml
@@ -6,12 +6,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_categories"
+        android:id="@+id/rv_drinks"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/item_category"
+        tools:listitem="@layout/item_drink"
         />
 
     <com.google.android.material.progressindicator.CircularProgressIndicator
@@ -24,5 +24,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
